--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
@@ -8,6 +8,7 @@
                 </button>
             </div>
             <div class="modal-body">
+                <div class="mensagemModal"  style="display:none;"></div>
                 @T("Deseja confirmar o agendamento?")
                 <span class="gridJQ"></span>
             </div>
