--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportar.cshtml
@@ -72,6 +72,26 @@
             $(".invalidCepJQ").hide();
         }
 
+        let cnpj = $(CNPJ).val();
+
+        cnpj = cnpj.replace(/[^\d]+/g, '');
+        // Elimina CNPJs invalidos conhecidos
+        if (cnpj == "00000000000000" ||
+            cnpj == "11111111111111" ||
+            cnpj == "22222222222222" ||
+            cnpj == "33333333333333" ||
+            cnpj == "44444444444444" ||
+            cnpj == "55555555555555" ||
+            cnpj == "66666666666666" ||
+            cnpj == "77777777777777" ||
+            cnpj == "88888888888888" ||
+            cnpj == "99999999999999") {
+            $("#CNPJ").addClass('is-invalid');
+            $('#existCNPJ').remove();
+            $("#CNPJ").parent().append("<span id='existCNPJ'><label id='CNPJ-error' class='is-invalid' for='CNPJ'>Forneça um CNPJ válido.</label><span>");
+            return false;
+        }
+
         if ($("#CNPJ-error").text().length > 0) {
             return false;
         }
