--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -231,6 +231,7 @@
     $("#DataColeta").on("blur", function () {
         $('#invalidaDataColeta').remove();
         $(this).removeClass('is-invalid');
+        $("#invalidaDataEntrega").remove();
 
         if ($("#DataColeta").val().length != 16) {
             $(this).addClass('is-invalid');
