--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCarga.cshtml
@@ -345,6 +345,9 @@
 
         $(".mensagemExclusao").hide();
         $("#btnExluirContainerNf").remove();
+
+        $("#btnExluirNfVariosContainer").remove();
+        
     }
 
 
@@ -938,7 +941,6 @@
         $("#dataEntregaVariosContainer_" + div).removeClass('is-invalid');
         $("#containerVariosContainer_" + div).removeClass('is-invalid');
 
-
         var maxAtivo = 0;
         var minAtivo = 0;
 
@@ -962,6 +964,14 @@
         }
 
         $(".btnAdicionarContainerJQ_" + maxAtivo.toString()).show();
+
+        var seq = (parseInt($('#hdfSeqContainerVariosContainer').val()) - 1);
+
+        if (seq.length < 2) {
+            seq = "0" + seq;
+        }
+
+        $('#hdfSeqContainerVariosContainer').val(seq);
     }
 
 
