--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
@@ -53,7 +53,7 @@
                     </div>*@
                     <div class="col-24">
                         <div class="form-group">
-                            <label for="" class="form-label">@T("Comentario")</label>
+                            <label for="" class="form-label">@T("Comentário")</label>
                             <textarea id="Comentario" class="form-control" name="Comentario" maxlength="300" rows="4"></textarea>
                         </div>
                     </div>
