--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -162,7 +162,7 @@
                         aux = aux + 1;
                     });
 
-                    $("#Container").val(aux -1);
+                    $("#Container").val(parseInt($("#Container").val()) - 1);
                 }
             },
             error: function (data) {
