--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCargaDTA.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCargaDTA.cshtml
@@ -437,6 +437,17 @@
         return "Comentários";
     }
 
+    $(".btnNaoPopupConfirmacaoJQ").on("click", function () {
+        $(".gridJQ .table").remove();
+    });
+
+    $('.close').on("click", function () {
+        $(".gridJQ .table").remove();
+    });
+
+    $('#modalPopupConfirmacao').on("click", function () {
+        $(".gridJQ .table").remove();
+    });
 
     function exibirListagemCargas(model) {
         $("#divRegistrosCargas").fadeIn("slide");
