--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCarga.cshtml
@@ -1177,6 +1177,12 @@
         $(".mensagemModal").html("<span class='alert alert-success' style='width:100%; float:left;'>Aguarde, estamos enviando a sua solicitação!</span>");
         $(".mensagemModal").fadeIn("slide");
 
+        $('#divRegistrosImportarCargas .table > tbody > tr').each(function () {
+            var texto = ($(this).find('.icon-coments').attr("title"));
+
+            $(this).find('.icon-coments').parent().text(texto);
+        });
+
           $.ajax({
             type: "POST",
               url: "/cms/@portal.Diretorio/AgendamentoIntermodal/IntegrarImportar",
@@ -1192,6 +1198,10 @@
                     $('#modalPopupConfirmacao').modal('hide');
                 }
                 else {
+                    // monta o HTML da popup
+                    $(".gridJQ").html($("#divRegistrosImportarCargas").html());
+                    $(".gridJQ .icon-delete").remove();
+
                     $(".mensagemModal").html("<span class='alert alert-danger' style='width:100%; float:left;'>Houve um problema no envio da sua solicitação, por favor, tente novamente mais tarde.</span>");
                 }
             },
