--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
@@ -67,9 +67,9 @@
             return false;
         }
 
+        $("#mensagem").html('');
         if ($("#cep").val().length != 9) {
-            $("#mensagem").html('');
-            $("#mensagem").html('<div class="alert alert-danger" role="alert">Cep inválido.</div>');
+            $("#mensagem").html('<div class="alert alert-danger" role="alert">CEP inválido.</div>');
             $('html, body').animate({ scrollTop: 0 }, 800);
             return;
         }
